jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    xlscsde.nhs.uk/dns-record: jupyter${environment_dns_suffix}
spec:
  ingressClassName: nginx
  rules:
  - host: ${environment_dns_prefix}jupyter${environment_dns_suffix}.${private_dnz_zone}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: proxy-public
            port: 
              name: http
  tls:
  - hosts:
    - ${environment_dns_prefix}jupyter${environment_dns_suffix}.${private_dnz_zone}
    secretName: ${environment_dns_prefix}jupyter${environment_dns_suffix}.${private_dnz_zone}-tls
